refactor code, add swagger part1